// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно рисует компонент для десктопа 1`] = `
<div
  className="BillingFooter BillingFooter_platform_desktop"
>
  <BillingLicense
    className="BillingFooter__license"
    licenseUrl="http://example.com"
  />
</div>
`;

exports[`правильно рисует компонент для мобилки 1`] = `
<div
  className="BillingFooter BillingFooter_platform_mobile"
>
  <BillingLicense
    className="BillingFooter__license"
    licenseUrl="http://example.com"
  />
</div>
`;
